--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,5 +1,81 @@
 .header{ 
     width: 100%;
-    background: red;
-    min-height: 100px;
+    background: #FFFFFF;
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 21px 12px 0px 12px;
+    .wrap{
+        max-width: 1736px;
+        width: 100%;
+    }
+    .top{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 20px;
+        .a_logo{
+            width: 100%;
+            max-width: 380px;
+        }
+        .logo{
+            width: 100%;
+            height: auto;
+        }
+        button{
+            padding: 12px 20px;
+            max-width: 280px;
+            width: 100%;
+            border-radius: 15px;
+            background: rgba(255, 72, 0, 0.83);
+            border: none;
+            font-size: 16px;
+            font-weight: 400;
+            color: #FFFFFF;
+            text-transform: uppercase;
+            transition: 0.3s ease, transform 0.1s ease;
+            border: 1px rgba(255, 72, 0, 0) solid;
+            &:hover{
+                background: #ffffff;
+                color: rgba(255, 72, 0, 0.83);
+                border: 1px rgba(255, 72, 0, 0.83) solid;
+            }
+            &:active{
+                transform: scale(0.98);
+            }
+        }
+    }
+    nav{
+        width: 100%;
+        padding: 16.5px 0px;
+        ul{
+            width: 100%;
+            display: flex;
+            gap: 10px;
+            justify-content: space-between;
+            li{
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                a{
+                    font-size: 16px;
+                    font-weight: 400;
+                    color: #000000;
+                    text-transform: uppercase;
+                    transition: 0.15s ease;
+                    &:hover{
+                        color: rgba(255, 72, 0, 0.83);
+                    }
+                }
+            }
+        }
+    }
 }
