--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -11,6 +11,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 21px 12px 0px 12px;
+    z-index: 999;
     .wrap{
         max-width: 1736px;
         width: 100%;
