--- a/src/components/Project_block/style.scss
+++ b/src/components/Project_block/style.scss
@@ -22,28 +22,40 @@
                 letter-spacing: -4%;
                 color: #000;
                 text-transform: uppercase;
+                text-align: center;
             }
             .title_second{
                 font-size: 40px;
                 font-weight: 400;
                 letter-spacing: -4%;
                 color: #000;
+                text-align: center;
+                @media (max-width: 1000px) {
+                    max-width: 684px;
+                }
             }
         }
         .cards{
             display: flex;
             gap: 64px;
             flex-direction: column;
+            @media (max-width: 1000px) {
+                align-items: center;
+            }
             .card_row{
                 display: flex;
                 justify-content: space-between;
                 flex-direction: row;
+                @media (max-width: 1000px) {
+                    flex-direction: column;
+                    gap: 24px;
+                }
                 .card{
                     max-width: 354px;
                     width: 100%;
                     display: flex;
                     flex-direction: column;
-                    
+                    min-height: 530px;
                     border: 1px #0091BE solid;
                     border-radius: 12px;
                     .photo{
@@ -55,7 +67,10 @@
                         display: flex;
                         flex-direction: column;
                         padding: 19px 11px 21px 14px;
-                        gap: 19px;
+                        justify-content: space-between;
+                        height: 100%;
+                        gap: 20px;
+                        
                         h2{
                             font-size: 32px;
                             font-weight: 400;
@@ -68,15 +83,31 @@
                             letter-spacing: -4%;
                             color: #000;
                         }
-                        button{
+                        .button{
                             max-width: 329px;
                             width: 100%;
                             padding: 9px 20px;
                             border-radius: 15px;
                             color: #FFFFFF;
                             background: rgba(255, 72, 0, 0.83);
-                            border: none;
-                            justify-self: flex-end;
+                            border: 1px transparent solid;
+                            transition: 0.15s ease;
+                            font-size: 16px;
+                            font-weight: 400;
+                            &:hover{
+                                background: #ffffff;
+                                color: rgba(255, 72, 0, 0.83);
+                                border: 1px rgba(255, 72, 0, 0.83) solid;
+                            }
+                            &:active{
+                                transform: scale(0.98);
+                            }
+                        }
+                        .text{
+                            display: flex;
+                            flex-direction: column;
+                            gap: 19px;
+                            width: 100%;
                         }
                     }
                 }
