--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -30,9 +30,13 @@
             width: 100%;
             height: auto;
         }
+        .button{
+            max-width: 280px;
+            width: 100%;
+            padding: 0;
+        }
         button{
             padding: 12px 20px;
-            max-width: 280px;
             width: 100%;
             border-radius: 15px;
             background: rgba(255, 72, 0, 0.83);
