--- a/src/components/Team/style.scss
+++ b/src/components/Team/style.scss
@@ -20,20 +20,27 @@
             display: flex;
             justify-content: space-between;
             gap: 12px;
+            @media (max-width: 750px) {
+                flex-direction: column;
+                align-items: center;
+            }
             .card{
                 max-width: 411px;
                 width: 100%;
-                border-radius: 12px;
-                overflow: hidden;
+                display: flex;
+                flex-direction: column;
                 .photo{
                     width: 100%;
                     height: auto;
+                    border-radius: 12px 12px 0px 0px;
                 }
                 .bottom{
                     display: flex;
                     justify-content: center;
                     align-items: center;
                     border: 1px #00A4D5 solid;
+                    border-radius: 0px 0px 12px 12px;
+                    padding: 20px 12px;
                     .text{
                         display: flex;
                         gap: 10px;
