--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -67,6 +67,9 @@
                 text-transform: uppercase;
                 text-align: center;
                 margin-bottom: 8px;
+                @media (max-width:555px) {
+                    font-size: 32px;
+                }
             }
             h2{
                 font-size: 28px;
@@ -75,12 +78,18 @@
                 text-transform: uppercase;
                 text-align: center;
                 margin-bottom: 14px;
+                @media (max-width:555px) {
+                    font-size: 16px;
+                }
             }
             p{
                 font-size: 16px;
                 font-weight: 400;
                 color: #00C3FF;
                 text-align: center;
+                @media (max-width:555px) {
+                    font-size: 12px;
+                }
             }
         }
     }
