--- a/src/components/Project_block/style.scss
+++ b/src/components/Project_block/style.scss
@@ -23,6 +23,9 @@
                 color: #000;
                 text-transform: uppercase;
                 text-align: center;
+                @media (max-width:555px) {
+                    font-size: 28px;
+                }
             }
             .title_second{
                 font-size: 40px;
@@ -33,12 +36,16 @@
                 @media (max-width: 1000px) {
                     max-width: 684px;
                 }
+                @media (max-width:555px) {
+                    font-size: 28px;
+                }
             }
         }
         .cards{
             display: flex;
             gap: 64px;
             flex-direction: column;
+            gap: 20px;
             @media (max-width: 1000px) {
                 align-items: center;
             }
@@ -46,6 +53,7 @@
                 display: flex;
                 justify-content: space-between;
                 flex-direction: row;
+                gap: 20px;
                 @media (max-width: 1000px) {
                     flex-direction: column;
                     gap: 24px;
