--- a/src/components/Help_donation/style.scss
+++ b/src/components/Help_donation/style.scss
@@ -49,6 +49,9 @@ h1{
     transition: 0.15s ease;
     font-size: 20px;
     font-weight: 400;
+    @media (max-width: 600px) {
+        font-size: 12px;
+    }
 }
 
 .row{
@@ -80,6 +83,9 @@ h1{
     margin-top: 10px;
     display: flex;
     gap: 34px;
+    @media (max-width: 600px) {
+        flex-direction: column;
+    }
     label{
         display: flex;
         align-items: center;
@@ -102,6 +108,9 @@ h1{
 .buttons-container {
     display: flex;
     gap: 24px;
+    @media (max-width: 600px) {
+        flex-direction: column;
+    }
 }
 
 .other-amount {
